force-app/main/default/objects/sf_devops__Deployment__e/sf_devops__Deployment__e.object-meta.xml
<CustomObject>
    <description>Platform Event for a Deployment</description>
    <label>Deployment</label>
    <pluralLabel>Deployments</pluralLabel>
</CustomObject>