force-app/main/default/objects/sf_devops__Deployment__e/fields/sf_devops__Change_Bundle_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Change_Bundle_Id__c</fullName>
    <description>The Change Bundle that was deployed</description>
    <label>Change Bundle Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>