force-app/main/default/objects/sf_devops__Deployment__e/fields/sf_devops__Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Deployment_Id__c</fullName>
    <description>The Deployment Id for this deployment in the target organization</description>
    <label>Deployment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>