force-app/main/default/objects/sf_devops__Deployment__e/fields/sf_devops__Target_Stage_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Target_Stage_Id__c</fullName>
    <description>The Pipeline Stage these change where deployed to</description>
    <label>Target Stage Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>