force-app/main/default/objects/sf_devops__Deployment__e/fields/sf_devops__Work_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Work_Item_Id__c</fullName>
    <description>The Work Item that was deployed</description>
    <label>Work Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>